# call_me_maybe_42

./: .gitignore  Makefile  README.md  notes.md  pyproject.toml
src/: __main__.py
src/call_me_maybe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
