[project]
name = "call-me-maybe"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "dsalwa", email = "dsalwa@student.42warsaw.pl"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "llm_sdk"
]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
]
